@@ -7,13 +7,22 @@ import com.teamcocoon.QuizzyAPI.model.Quiz;
 import com.teamcocoon.QuizzyAPI.model.Response;
 import com.teamcocoon.QuizzyAPI.model.User;
 import com.teamcocoon.QuizzyAPI.repositories.QuizRepository;
+import com.teamcocoon.QuizzyAPI.repositories.ResponseRepository;
 import com.teamcocoon.QuizzyAPI.repositories.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.jetbrains.annotations.NotNull;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
+import org.apache.commons.lang3.RandomStringUtils;
 
+import java.util.*;
+import java.util.ArrayList;
+import java.util.Iterator;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.server.ResponseStatusException;
@@ -22,61 +31,180 @@ import org.springframework.web.server.ResponseStatusException;
 @RequiredArgsConstructor
 public class QuizService {
 
+    private static final Logger log = LoggerFactory.getLogger(QuizService.class);
     @Autowired
     private final QuizRepository quizRepository;
     @Autowired
     private final QuestionService questionService;
     @Autowired
     private final UserRepository userRepository;
+    @Autowired
+    private ResponseRepository responseRepository;
+    @Autowired
+    private UserService userService;
 
+    /**
+     * Issue12
+     * Récupère les quiz d'un utilisateur et ajoute un lien HATEOAS pour la création de quiz.
+     * ajout d'un lien de création de quiz dans la réponse.
+     */
     public ResponseEntity<ListQuizResponseDto> getListQuizByUserId(String uid) {
         List<Quiz> listQuiz = quizRepository.findListQuizByUserId(uid);
 
-        ListQuizResponseDto listQuizResponseDto = new ListQuizResponseDto(
-                listQuiz.stream()
-                        .map(quiz -> QuizDto.builder()
-                                .id(quiz.getQuizId())
-                                .title(quiz.getTitle())
-                                .build())
-                        .collect(Collectors.toList())
-        );
+        List<QuizDto> quizDtoList = listQuiz.stream()
+                .map(quiz -> {
+                    Map<String, String> links = new HashMap<>();
+                    if (isQuizStartable(quiz)) {
+                        links.put("start", "http://127.0.0.1:3000/api/quiz/" + quiz.getQuizId() + "/start");
+                    }
+                    return new QuizDto(quiz.getQuizId(), quiz.getTitle(), quiz.getDescription(), links.isEmpty() ? null : links);
+                })
+                .collect(Collectors.toList());
+
+        ListQuizResponseDto listQuizResponseDto = new ListQuizResponseDto(quizDtoList);
 
         return ResponseEntity.ok(listQuizResponseDto);
     }
 
+    private boolean isQuizStartable(Quiz quiz) {
+        return checkForQuestionValidity(quiz.getQuestions()) &&
+              chekForTitleValidity(quiz) &&
+              chekForQuizzNotEmptyQuestionListValidity(quiz);
+    }
+
+    private boolean chekForTitleValidity(Quiz quiz) {
+        return !quiz.getTitle().isEmpty();
+    }
+    private boolean chekForQuizzNotEmptyQuestionListValidity(Quiz quiz) {
+        return quiz.getQuestions() != null && !quiz.getQuestions().isEmpty();
+    }
+    private boolean checkForQuestionValidity(List<Question> questions){
+
+        for (Question question : questions) {
+            if (!isQuestionValid(question)) {
+                return false;
+            }
+        }
+        return true;
+    }
+    private boolean isQuestionValid(Question question) {
+        List<Response> responses = questionService.getResponsesByQuestion(question.getQuestionId());
+        if (question.getTitle() == null || question.getTitle().isEmpty() ) {
+            return false;
+        }
+        if (responses == null || responses.size() < 2) {
+            return false;
+        }
+        long correctAnswersCount = correctAnswerCountFor(responses);
+        System.out.println(" nombre de reponses valides " +correctAnswersCount);
+        return correctAnswersCount >= 1;
+    }
+
+    private long correctAnswerCountFor(List<Response> responses){
+        return responses.stream().filter(Response::isCorrect).count();
+    }
+
+
+    /**
+     * Sauvegarde simple d'un quiz en base de données.
+     * return Le quiz persisté
+     */
     public Quiz saveQuiz(Quiz quiz) {
         return quizRepository.save(quiz);
     }
 
-    public ResponseEntity<QuizResponseDto> getQuizByIdAndUserId(Long idQuiz, String uid) {
-        System.out.println("idQuiz: " + idQuiz);
+    /**
+     * Issue6
+     * Crée un nouveau quiz pour un utilisateur à partir des informations minimales.
+     * Implémente l'issue6' de création de quiz avec génération automatique de l'identifiant.
+     *
+     * Étapes clés :
+     * - Vérifie l'authentification de l'utilisateur
+     * - Associe le quiz au bon utilisateur
+     * - Génère une URI de localisation pour accéder au quiz créé
+     */
+    public Quiz createQuiz(QuizPostDto quizDto, String uid) {
+        System.out.println("UID reçu : " + uid);
+
+        User user = userService.getUserByUID(uid);
+        System.out.println("Utilisateur trouvé : " + user);
+
+        Quiz quiz = new Quiz();
+        quiz.setTitle(quizDto.title());
+        quiz.setDescription(quizDto.description());
+        quiz.setUser(user);
+
+        return quizRepository.save(quiz);
+
+    }
+
+
+
+    /**
+     * Issue7
+     * Récupère un quiz avec ses questions, vérifiant l'appartenance à l'utilisateur.
+     * Transforme les entités en DTO pour la réponse API.
+     * param idQuiz Identifiant du quiz
+     * param uid Identifiant de l'utilisateur
+     * return DTO contenant les détails du quiz et ses questions
+     * throws RuntimeException si le quiz n'existe pas ou n'appartient pas à l'utilisateur
+     */
+    public ResponseEntity<ListQuestionsDto> getQuizByIdAndUserId(Long idQuiz, String uid) {
+        log.info("Récupération du quiz : " + idQuiz);
 
         Quiz quiz = quizRepository.findByIdWithQuestions(idQuiz)
                 .filter(q -> q.getUser().getUserId().equals(uid))
-                .orElseThrow(() -> new RuntimeException("Quiz not found"));
+                .orElseThrow(() -> new EntityNotFoundedException("Quiz not found or unauthorized"));
 
-        System.out.println("Quiz title: " + quiz.getTitle());
+        List<QuestionAnswersDto> questionDtoss = new ArrayList<>();
 
-        // Transformer les questions en DTOs pour n'envoyer que le titre
-        List<QuestionDto> questionDtos = quiz.getQuestions().stream()
-                .map(q -> new QuestionDto(q.getTitle()))
-                .collect(Collectors.toList());
+        quiz.getQuestions().forEach(question -> {
+            List<Response> responses = questionService.getResponsesByQuestion(question.getQuestionId());
+            List<AnswersDTO> answersDtos = responses.stream()
+                    .map(response -> AnswersDTO.builder()
+                            .title(response.getTitle())
+                            .isCorrect(response.isCorrect())
+                            .build())
+                    .toList();
 
-        return ResponseEntity.ok(QuizResponseDto.builder()
+            questionDtoss.add(QuestionAnswersDto.builder()
+                    .title(question.getTitle())
+                    .answers(answersDtos)
+                    .build());
+        });
+
+        log.info("Envoi de la liste avec ses questions : " + questionDtoss);
+
+        return ResponseEntity.ok(ListQuestionsDto.builder()
                 .title(quiz.getTitle())
                 .description(quiz.getDescription())
-                .questions(questionDtos)
+                .questions(questionDtoss)
                 .build());
     }
+
+
 
     public Quiz getQuizById(Long idQuiz) {
         return quizRepository.findById(idQuiz)
                 .orElseThrow(() -> new EntityNotFoundedException("Ce quizz n'existe pas !!"));
     }
 
-    public Long addQuestionToQuiz(Long idQuiz, AddNewQuestionDTO questionDTO) {
+    /**
+     * Ajoute une nouvelle question à un quiz existant.
+     *
+     * Cette méthode :
+     * 1. Récupère le quiz par son ID
+     * 2. Crée et sauvegarde une nouvelle question associée au quiz
+     * 3. Ajoute les réponses à la question
+     * 4. Met à jour le quiz avec la nouvelle question
+     *
+     * param idQuiz L'identifiant du quiz auquel ajouter la question
+     * param questionDTO Les détails de la nouvelle question (titre et réponses)
+     * return L'identifiant de la question nouvellement créée
+     */
+    public Long addQuestionToQuiz(Long idQuiz, @NotNull AddNewQuestionDTO questionDTO) {
         Quiz quizz = getQuizById(idQuiz);
-        Question question = questionService.addQuestion(Question.builder()
+        Question question = questionService.saveQuestion(Question.builder()
                 .title(questionDTO.title())
                 .quiz(quizz)
                 .build());
@@ -90,11 +218,52 @@ public class QuizService {
         });
 
         quizz.getQuestions().add(question);
-
         quizRepository.save(quizz);
         return question.getQuestionId();
     }
 
+    /**
+     * Issue11
+     * Met à jour une question dans un quiz spécifique.
+     * Supprime les anciennes réponses et ajoute les nouvelles.
+     * param quizId Identifiant du quiz
+     * param questionId Identifiant de la question à modifier
+     * param newTitle Nouveau titre de la question
+     * param updatedAnswersDTOs Nouvelles réponses à associer
+     * throws EntityNotFoundedException si la question n'appartient pas au quiz
+     */
+    public void updateQuestion(Long quizId, Long questionId, String newTitle, List<AnswersDTO> updatedAnswersDTOs) {
+        log.info("Updating question with : " +updatedAnswersDTOs);
+        Quiz quiz = getQuizById(quizId);
+        Question   question = questionService.getQuestionById(questionId);
+        if (!question.getQuiz().equals(quiz)) {
+            throw new EntityNotFoundedException("Question does not belong to the specified quiz");
+        }
+        questionService.updateQuestionTitle(question, newTitle);
+        List<Response> responses = questionService.getResponsesByQuestion(questionId);
+        assert  responses != null;
+        responses.forEach(response -> {
+            question.getResponses().remove(response);
+            questionService.deleteAllAnswers(response);
+        });
+
+        updatedAnswersDTOs.forEach(answer -> {
+            Response response = Response.builder()
+                    .title(answer.title())
+                    .isCorrect(answer.isCorrect())
+                    .build();
+            log.info("Response : " + response);
+            responseRepository.save(response);
+            questionService.addResponsesToQuestion(questionId,response);
+        });
+        questionService.saveQuestion(question);
+    }
+
+    /**
+     * Mise à jour du titre d'un quiz avec validation de propriété.
+     * Gère la modification partielle d'un quiz selon les spécifications JSON Patch.
+     * Vérifie que l'utilisateur est bien propriétaire du quiz avant modification.
+     */
     public void updateQuizTitle(Long id, List<PatchQuizTitleRequestDTO> patchQuizTitleRequestDTOS, String uid) {
         Quiz quiz = quizRepository.findById(id).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Quiz not found"));
         User user = userRepository.findById(uid).orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "User not found"));
@@ -111,4 +280,70 @@ public class QuizService {
 
         quizRepository.save(quiz);
     }
+
+    /**
+     * Génère un identifiant aléatoire de 6 caractères alphanumériques.
+     * @return Code d'exécution du quiz
+     */
+    public String generateExecutionId() {
+        return RandomStringUtils.randomAlphanumeric(6);
+    }
+
+    /**
+     * Retrouve un quiz spécifique appartenant à un utilisateur.
+     * return Le quiz si trouvé, null sinon
+     */
+    public Quiz getQuizByUserId(String userId, Long quizId) {
+
+        List<Quiz> quizzes = quizRepository.findListQuizByUserId(userId);
+        log.info("Quiz size "+quizzes.size()+"");
+
+        for (Quiz quiz : quizzes) {
+            if (quiz.getQuizId().equals(quizId)) {
+                log.info(quiz.getTitle());
+                return quiz;
+            }
+        }
+        return null;
+    }
+
+    /**
+     * Vérifie si un quiz est prêt à être démarré.
+     * Conditions : quiz non vide et chaque question a au moins une réponse.
+     * return true si le quiz est complet, false sinon
+     */
+    public boolean isQuizReady(Quiz quiz) {
+        System.out.println("question : " + quiz.getQuestions().size());
+        if (quiz.getQuestions() == null || quiz.getQuestions().isEmpty()) {
+            return false;
+        }
+
+        for (Question question : quiz.getQuestions()) {
+            System.out.println("response size " +  question.getResponses().size());
+            if (question.getResponses() == null || question.getResponses().isEmpty()) {
+                return false;
+            }
+        }
+
+        return true;
+    }
+
+
+    public QuizDToRelease getQuizByQuizCode(String executionId) {
+        Optional<Quiz> quiz = quizRepository.findByQuizCode(executionId);
+        if (quiz.isEmpty()) {
+            throw new EntityNotFoundedException("Quiz not found");
+
+        }
+        Quiz quiz1 = quiz.get();
+        return new QuizDToRelease(
+                quiz1.getQuizId(),
+                quiz1.getQuizCode(),
+                quiz1.getTitle(),
+                quiz1.getDescription());
+    }
+
+
+
+
 }
